--- a/src/components/TopBar.css
+++ b/src/components/TopBar.css
@@ -436,3 +436,40 @@
 .theme-dark .toggle-switch.checked::after {
     background-color: #202124;
 }
+
+/* Delay Input Styles */
+.delay-input {
+    width: 60px;
+    padding: 6px 8px;
+    border-radius: 4px;
+    border: 1px solid #dadce0;
+    background-color: white;
+    color: #3c4043;
+    font-size: 13px;
+    text-align: right;
+    outline: none;
+    transition: border-color 0.2s;
+    /* Hide spinner buttons for number input */
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
+
+.delay-input::-webkit-outer-spin-button,
+.delay-input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.delay-input:focus {
+    border-color: #1a73e8;
+}
+
+.theme-dark .delay-input {
+    background-color: #3c4043;
+    border-color: #5f6368;
+    color: #e8eaed;
+}
+
+.theme-dark .delay-input:focus {
+    border-color: #8ab4f8;
+}
